ARCH: add ECMWF ag arch files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,8 +129,14 @@ add_subdirectory(src)
 ## determine lib type
 set( SHARED_LIBS_FOR_OFFLOAD_DEFAULT OFF )
 if( CMAKE_Fortran_COMPILER_ID MATCHES "PGI|NVHPC" AND
-    CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 25.7.0)
-    set( SHARED_LIBS_FOR_OFFLOAD_DEFAULT ON )
+    CMAKE_Fortran_COMPILER_VERSION VERSION_GREATER_EQUAL 25.7.0 )
+    if( DEFINED BUILD_SHARED_LIBS )
+      set( SHARED_LIBS_FOR_OFFLOAD_DEFAULT ${BUILD_SHARED_LIBS} )
+    elseif( DEFINED FIELD_API_BUILD_SHARED_LIBS )
+      set( SHARED_LIBS_FOR_OFFLOAD_DEFAULT ${FIELD_API_BUILD_SHARED_LIBS} )
+    else()
+      set( SHARED_LIBS_FOR_OFFLOAD_DEFAULT ON )
+    endif()
 endif()
 cmake_dependent_option(BUILD_SHARED_LIBS "Dynamically link field_api" ON "NOT (HAVE_ACC OR HAVE_OMP_OFFLOAD)" ${SHARED_LIBS_FOR_OFFLOAD_DEFAULT})
 
