Add optional device memory pool

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -108,6 +108,7 @@ list(APPEND TEST_FILES
         test_field_delete_on_null.F90
         test_get_device_data_non_contiguous.F90
         test_get_device_data_wronly.F90
+        test_device_mem_pool.F90
         test_host_mem_pool.F90
         test_lastdim.F90
         test_legacy.F90
