Compile field_defaults_module for each precision

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,7 @@ foreach(prec ${precisions})
       SOURCES ${prec_srcs}
       OBJECTS
          ${obj_libs}
+         field_api_defaults_${prec}
       PRIVATE_LIBS
          $<${fiat_FOUND}:fiat>
          $<${fiat_FOUND}:parkind_${prec}>
@@ -199,7 +200,7 @@ foreach(prec ${precisions})
   # add sub-component module directories to target
   field_api_target_add_module_dirs(
     TARGET     ${LIBNAME}_${prec}
-    LIBS       ${obj_libs}
+    LIBS       ${obj_libs} field_api_defaults_${prec}
   )
 
   if( prec MATCHES sp )
