LLVMFlang workaround: link field_api_defaults to downstream object libs because of leaking imports

--- a/src/buffer/CMakeLists.txt
+++ b/src/buffer/CMakeLists.txt
@@ -22,5 +22,5 @@ field_api_expand_fypp_ranksuff(
 field_api_add_object_library(
     LIBNAME        field_api_buffer
     SRCS           ${srcs}
-    LIBRARIES      field_api_core field_api_debug field_api_factory
+    LIBRARIES      field_api_core field_api_debug field_api_factory field_api_defaults_${DEFAULT_PRECISION}
 )
