--- a/src/factory/CMakeLists.txt
+++ b/src/factory/CMakeLists.txt
@@ -30,5 +30,5 @@ field_api_expand_fypp(
 field_api_add_object_library(
     LIBNAME        field_api_factory
     SRCS           ${srcs}
-    LIBRARIES      field_api_core field_api_debug
+    LIBRARIES      field_api_core field_api_debug field_api_defaults_${DEFAULT_PRECISION}
 )
